# sw-axi

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFlatBuffers.cmake  FindModelsim.cmake  FindVivado.cmake  SystemVerilog.cmake  Utils.cmake
scripts/: build-sv-app.sh  build-sv-lib.sh  common.mk  format.sh  run-modelsim.sh  run-xsim.sh  xilinx.mk  xsim-make-project.sh  xsim-run.tcl
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Data.cc  Data.hh  IpcStructs.fbs  RouterClient.cc  RouterClient.hh  Utils.cc  Utils.hh
src/lib/: CMakeLists.txt  Makefile  Queue.hh  SwAxi.cc  SwAxi.hh
src/router/: CMakeLists.txt  go.mod  main.go
src/router/sw_axi/: client.go  data.go  router.go
src/sim/: CMakeLists.txt  Makefile  axi4lite.sv  bridge.cc  bridge.sv  interfaces.sv  package.sv  remote.sv  sw-axi.prj  utils.sv
tests/: CMakeLists.txt
tests/00-version/: CMakeLists.txt  testbench.cc  testbench.sv
tests/01-handshake/: CMakeLists.txt  Makefile  testbench.cc  testbench.sv
tests/02-sw-master-lite/: CMakeLists.txt  testbench.cc
